--- a/css/pages/complex.sass
+++ b/css/pages/complex.sass
@@ -2,6 +2,7 @@
   &_complex
     padding: 85px 0
     background: url("../images/bg_hero_complex.jpg") no-repeat
+    background-size: cover
   &__first-row
     padding: 0 0 50px
     display: flex
@@ -67,7 +68,7 @@
       &_big
         flex: 7
   &__title
-    margin-bottom: 30px
+    margin-bottom: 0.8em
     font-size: 36px
     font-weight: 600
   &__list
@@ -79,7 +80,7 @@
       li
         width: 50%
     &__item
-      margin-bottom: 12px
+      margin-bottom: 0.75em
       display: inline-flex
       &::before
         margin: -3px 18px 0 0
