--- a/css/responsive/max1200.sass
+++ b/css/responsive/max1200.sass
@@ -59,6 +59,11 @@
     background: url('../images/social_ inner_price.png')
     background-size: cover
 
+  .about__hero
+    & .hero__second-row
+      flex-direction: column-reverse
+      gap: 2rem
+
   .contacts
     &_main
       flex-direction: column
@@ -93,6 +98,12 @@
       justify-content: center
     &__submit-wrapper
       margin-top: 40px
+
+  .approach
+    &__text-highlight
+      font-size: 20px
+    &_main h2
+      font-size: 44px
 
   .voronka
     &__list
