--- a/css/responsive/max360.sass
+++ b/css/responsive/max360.sass
@@ -1,3 +1,25 @@
 @media only screen and (max-width: 360px)
-  h2.title, h3.title
+  h2.title, h3.title, .questions__title
     font-size: 24px
+
+  .prices
+    &__info
+      font-size: 22px
+    &__list
+      li
+        font-size: 14px
+
+  .callback h3
+    font-size: 24px
+
+  .form_main .btn_submit_white
+    padding: 18px 20px
+
+  .about__download-link
+    width: 140px
+    height: 140px
+    font-size: 14px
+    &::before
+      margin-bottom: 4px
+    span
+      margin-top: 0.5em
