--- a/css/general.sass
+++ b/css/general.sass
@@ -16,8 +16,8 @@ body
       position: relative
     &_right
       margin: 0 0 0 auto
-      padding-left: 15px
-      max-width: 1625px
+      padding-left: 25px
+      max-width: 1635px
     &_half
       max-width: 650px
 
@@ -244,7 +244,7 @@ div, ul, li, a, button
     @include font($textBlack, 800, 58px, 1)
     &_main
       margin: 1em 0 0.625em
-      padding-bottom: 40px
+      padding-bottom: 0.625em
       position: relative
       @include font($textBlack, 800, 64px, 1.1)
       border-bottom: 1px solid #9999994a
