--- a/css/pages/complex.sass
+++ b/css/pages/complex.sass
@@ -1,6 +1,6 @@
 .hero
   &_complex
-    padding: 85px 0
+    padding: 4em 0
     background: url("../images/bg_hero_complex.jpg") no-repeat
     background-size: cover
   &__first-row
@@ -19,7 +19,7 @@
     margin: 95px 0 90px
   &_weba
     h2
-      margin-bottom: 80px
+      margin-bottom: 1.25em
       width: 100%
       text-align: center
   &__block
@@ -162,7 +162,8 @@
 
 .voronka
   h2
-    margin-top: 60px
+    margin: 1em auto 0
+    max-width: 1100px
     text-align: center
   &__list
     padding-bottom: 50px
