--- a/css/responsive/max360.sass
+++ b/css/responsive/max360.sass
@@ -23,3 +23,31 @@
       margin-bottom: 4px
     span
       margin-top: 0.5em
+
+  .contacts
+    &__phone
+      font-size: 24px
+    &__wrapper_half.right h3
+      font-size: 28px
+
+  .s_how .how .how__list__item
+    padding-left: 64px
+
+  .stage
+    &__list
+      padding: 0
+      li
+        h3
+          font-size: 20px
+        &::after
+          top: 40px
+
+  .result
+    &__list__item, &__list__item:first-child
+      padding: 72px 0 1em
+      &::before
+        top: 1em
+        left: calc(50% - 80px)
+
+
+
