--- a/css/general.sass
+++ b/css/general.sass
@@ -182,6 +182,9 @@ div, ul, li, a, button
 .slick-slide
   &:focus
     outline: none
+  img
+    max-width: 100%
+    object-fit: none
 
 .slick-dots
   padding: 0
@@ -295,7 +298,7 @@ div, ul, li, a, button
     content: " "
     position: absolute
     display: block
-    bottom: 12px
+    bottom: 0
     left: 0
     width: 50px
     height: 3px
