--- a/css/pages/main.sass
+++ b/css/pages/main.sass
@@ -71,14 +71,18 @@
         content: url("../images/benef2.svg")
       &:nth-child(3)::before
         content: url("../images/benef3.svg")
-    &_complex
+    &_complex, &_social, &_weba
       align-items: center
+      max-width: 360px
       color: #ffffff
       font-size: 20px
       font-weight: 600
       line-height: 1.3
+      &:last-child
+        margin-right: 0
       &::before
         margin-right: 35px
+    &_complex
       &:first-child::before
         content: url("../images/icon_opyt.svg")
       &:nth-child(2)::before
@@ -86,13 +90,6 @@
       &:nth-child(3)::before
         content: url("../images/icon_sert_spec.svg")
     &_social
-      align-items: center
-      color: #ffffff
-      font-size: 20px
-      font-weight: 600
-      line-height: 1.3
-      &::before
-        margin-right: 35px
       &:first-child::before
         content: url("../images/icon_social_hero1.svg")
       &:nth-child(2)::before
@@ -100,17 +97,14 @@
       &:nth-child(3)::before
         content: url("../images/icon_social_hero3.svg")
     &_weba
-      align-items: center
-      color: #ffffff
-      font-size: 20px
-      font-weight: 600
-      line-height: 1.3
-      &::before
-        margin-right: 35px
       &:first-child::before
         content: url("../images/icon_weba_hero1.svg")
       &:nth-child(2)::before
         content: url("../images/icon_weba_hero2.svg")
+      &:nth-child(3)
+        flex-shrink: 2
+        &::before
+          content: url("../images/icon_sert_spec.svg")
     &_about
       +flex-column
       font-size: 20px
@@ -390,6 +384,10 @@
     margin: 0 -10px
   &__item
     margin: 0 10px
+    &__container
+      display: flex
+      justify-content: center
+      flex-direction: column
     &__link
       +flex-column
     &__content
@@ -431,7 +429,7 @@
     margin-top: 40px
     display: grid
     grid-gap: 20px
-    grid-template-columns: repeat(auto-fit, minmax(340px, 600px))
+    grid-template-columns: repeat(auto-fit, minmax(320px, 600px))
     justify-content: center
     &.slick-initialized img
       width: 100%
@@ -470,7 +468,7 @@
     justify-content: center
     &__list
       display: flex
-      li
+      li:not(:last-child)
         margin-right: 15px
     &__btn
       width: 45px
@@ -576,7 +574,7 @@
         font-weight: 800
         line-height: 1
     &.left
-      padding: 60px 0 80px
+      padding: 60px 0 80px 20px
       h3
         margin-bottom: 15px
         font-size: 40px
