--- a/css/style.css
+++ b/css/style.css
@@ -392,6 +392,10 @@ div, ul, li, a, button {
 .slick-slide:focus {
   outline: none;
 }
+.slick-slide img {
+  max-width: 100%;
+  object-fit: none;
+}
 
 .slick-dots {
   padding: 0;
@@ -542,7 +546,7 @@ div, ul, li, a, button {
   content: " ";
   position: absolute;
   display: block;
-  bottom: 12px;
+  bottom: 0;
   left: 0;
   width: 50px;
   height: 3px;
@@ -1304,14 +1308,18 @@ div, ul, li, a, button {
 .benefits__item_main:nth-child(3)::before {
   content: url("../images/benef3.svg");
 }
-.benefits__item_complex {
+.benefits__item_complex, .benefits__item_social, .benefits__item_weba {
   align-items: center;
+  max-width: 360px;
   color: #ffffff;
   font-size: 20px;
   font-weight: 600;
   line-height: 1.3;
 }
-.benefits__item_complex::before {
+.benefits__item_complex:last-child, .benefits__item_social:last-child, .benefits__item_weba:last-child {
+  margin-right: 0;
+}
+.benefits__item_complex::before, .benefits__item_social::before, .benefits__item_weba::before {
   margin-right: 35px;
 }
 .benefits__item_complex:first-child::before {
@@ -1323,16 +1331,6 @@ div, ul, li, a, button {
 .benefits__item_complex:nth-child(3)::before {
   content: url("../images/icon_sert_spec.svg");
 }
-.benefits__item_social {
-  align-items: center;
-  color: #ffffff;
-  font-size: 20px;
-  font-weight: 600;
-  line-height: 1.3;
-}
-.benefits__item_social::before {
-  margin-right: 35px;
-}
 .benefits__item_social:first-child::before {
   content: url("../images/icon_social_hero1.svg");
 }
@@ -1342,21 +1340,17 @@ div, ul, li, a, button {
 .benefits__item_social:nth-child(3)::before {
   content: url("../images/icon_social_hero3.svg");
 }
-.benefits__item_weba {
-  align-items: center;
-  color: #ffffff;
-  font-size: 20px;
-  font-weight: 600;
-  line-height: 1.3;
-}
-.benefits__item_weba::before {
-  margin-right: 35px;
-}
 .benefits__item_weba:first-child::before {
   content: url("../images/icon_weba_hero1.svg");
 }
 .benefits__item_weba:nth-child(2)::before {
   content: url("../images/icon_weba_hero2.svg");
+}
+.benefits__item_weba:nth-child(3) {
+  flex-shrink: 2;
+}
+.benefits__item_weba:nth-child(3)::before {
+  content: url("../images/icon_sert_spec.svg");
 }
 .benefits__item_about {
   display: flex;
@@ -1749,6 +1743,11 @@ div, ul, li, a, button {
 .staff__item {
   margin: 0 10px;
 }
+.staff__item__container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
 .staff__item__link {
   display: flex;
   flex-direction: column;
@@ -1804,7 +1803,7 @@ div, ul, li, a, button {
   margin-top: 40px;
   display: grid;
   grid-gap: 20px;
-  grid-template-columns: repeat(auto-fit, minmax(340px, 600px));
+  grid-template-columns: repeat(auto-fit, minmax(320px, 600px));
   justify-content: center;
 }
 .portfolio__list.slick-initialized img {
@@ -1857,7 +1856,7 @@ div, ul, li, a, button {
 .portfolio__pagination__list {
   display: flex;
 }
-.portfolio__pagination__list li {
+.portfolio__pagination__list li:not(:last-child) {
   margin-right: 15px;
 }
 .portfolio__pagination__btn {
@@ -2003,7 +2002,7 @@ div, ul, li, a, button {
   line-height: 1;
 }
 .contacts__wrapper_half.left {
-  padding: 60px 0 80px;
+  padding: 60px 0 80px 20px;
 }
 .contacts__wrapper_half.left h3 {
   margin-bottom: 15px;
@@ -2430,7 +2429,7 @@ div, ul, li, a, button {
 }
 
 .hero_complex {
-  padding: 85px 0;
+  padding: 4em 0;
   background: url("../images/bg_hero_complex.jpg") no-repeat;
   background-size: cover;
 }
@@ -2454,7 +2453,7 @@ div, ul, li, a, button {
   margin: 95px 0 90px;
 }
 .prices_weba h2 {
-  margin-bottom: 80px;
+  margin-bottom: 1.25em;
   width: 100%;
   text-align: center;
 }
@@ -2649,7 +2648,8 @@ div, ul, li, a, button {
 }
 
 .voronka h2 {
-  margin-top: 60px;
+  margin: 1em auto 0;
+  max-width: 1100px;
   text-align: center;
 }
 .voronka__list {
@@ -2898,12 +2898,7 @@ div, ul, li, a, button {
     right: unset;
   }
 
-  .s_hero .hero {
-    padding-top: 2em;
-  }
-
-  .hero h1.white, .hero h1 {
-    margin-top: 1em;
+  .title__h1 {
     font-size: 48px;
   }
 
@@ -2915,6 +2910,14 @@ div, ul, li, a, button {
     font-size: 16px;
   }
 
+  .s_hero .hero {
+    padding-top: 2em;
+  }
+
+  .s_partners {
+    margin-top: 20px;
+  }
+
   .hero__first-row {
     padding-bottom: 28px;
     flex-direction: column;
@@ -2922,9 +2925,23 @@ div, ul, li, a, button {
   .hero__first-row__right {
     margin: 1em auto;
   }
-
+  .hero h1.white {
+    margin-right: 0;
+  }
+  .hero h1.white .hero h1 {
+    margin-top: 1em;
+    font-size: 48px;
+  }
   .hero_main__portfolio-link {
     right: 1em;
+  }
+
+  .s_staff_service-page {
+    margin-top: 20px;
+  }
+
+  .approach__img_complex, .approach__img_social {
+    padding-left: 20px;
   }
 
   .prices__block_olive_complex::after {
@@ -2966,6 +2983,11 @@ div, ul, li, a, button {
 
   .about__hero .hero__second-row {
     margin-top: 0;
+  }
+
+  .target .approach__img {
+    padding-left: 40px;
+    max-width: 50%;
   }
 
   .result {
@@ -3208,6 +3230,10 @@ div, ul, li, a, button {
   }
 }
 @media only screen and (max-width: 640px) {
+  .title__h1 {
+    font-size: 36px;
+  }
+
   .hero h1.white, .hero h1 {
     font-size: 32px;
   }
@@ -3249,10 +3275,25 @@ div, ul, li, a, button {
   .hero_weba, .hero_social, .hero_complex {
     padding-bottom: 2rem;
   }
+  .hero_weba .hero__first-row__left, .hero_social .hero__first-row__left, .hero_complex .hero__first-row__left {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+  .hero_weba .hero__first-row__left h1, .hero_social .hero__first-row__left h1, .hero_complex .hero__first-row__left h1 {
+    margin: 1em 0 0;
+    text-align: center;
+  }
+  .hero_weba .hero__first-row__right, .hero_social .hero__first-row__right, .hero_complex .hero__first-row__right {
+    margin: 0 auto;
+  }
   .hero_weba .hero__first-row__right .btn_gradient, .hero_social .hero__first-row__right .btn_gradient, .hero_complex .hero__first-row__right .btn_gradient {
     margin-top: 3em;
     padding: 20px 32px;
     font-size: 14px;
+  }
+  .hero_case p {
+    font-size: 20px;
   }
 
   .portfolio__item__text__title {
@@ -3266,6 +3307,10 @@ div, ul, li, a, button {
     margin-top: 60px;
   }
 
+  .partners {
+    padding-bottom: 20px;
+  }
+
   .approach__img_complex, .approach__img_social {
     padding-left: 30px;
   }
@@ -3274,11 +3319,12 @@ div, ul, li, a, button {
     width: 160px;
     height: 160px;
   }
-
+  .about__download-link::before {
+    margin-bottom: 0;
+  }
   .about__hero .hero__first-row__right {
     margin-bottom: 0;
   }
-
   .about__project-list {
     margin-left: 2em;
     flex-flow: nowrap column;
@@ -3289,6 +3335,17 @@ div, ul, li, a, button {
 
   .about__hero .hero__second-row__left .list__title {
     margin: 20px 0 16px;
+    text-align: center;
+  }
+
+  .services_page .btn_round_white {
+    display: none;
+  }
+  .services_page .services__info__button-wrapper {
+    justify-content: center;
+  }
+  .services_page .services__info__first-row {
+    justify-content: center;
     text-align: center;
   }
 
@@ -3333,11 +3390,66 @@ div, ul, li, a, button {
   .contacts__list_main {
     margin: 40px auto 0;
   }
+  .contacts__wrapper_half.left {
+    padding: 30px 0;
+  }
+  .contacts__wrapper_half.right {
+    padding: 60px 20px 40px;
+    display: flex;
+    flex-direction: column;
+  }
+  .contacts__wrapper_half.right h3 {
+    text-align: center;
+  }
+  .contacts__wrapper_half.right .contacts__list {
+    margin: 20px 0;
+  }
+  .contacts__wrapper_half.right .btn {
+    align-self: center;
+  }
+  .contacts__phone {
+    font-size: 32px;
+  }
+
+  .stage__list {
+    padding: 0 1em;
+  }
+  .stage__list li {
+    padding: 24px 0 36px;
+  }
+  .stage__list li::after {
+    left: unset;
+    bottom: unset;
+    right: 0;
+    top: 24px;
+  }
+  .stage__list li h3 {
+    margin-right: 130px;
+    font-size: 28px;
+  }
+
+  .result__list__item {
+    padding-right: 0;
+  }
+  .result__list__item__title {
+    font-size: 20px;
+  }
+  .result .title {
+    margin-left: 0;
+    font-size: 40px;
+  }
+
+  .target .approach__img {
+    padding-left: 20px;
+  }
 
   .staff .title {
     margin-right: unset;
     padding: 0 1em;
     text-align: center;
+  }
+  .staff__text {
+    padding: 0;
   }
 
   .callback h3 {
@@ -3359,21 +3471,25 @@ div, ul, li, a, button {
   .slick-slider {
     margin: 30px auto 0;
   }
+
+  .portfolio__pagination__btn_prev, .portfolio__pagination__btn_next {
+    display: none;
+  }
 }
 @media only screen and (max-width: 480px) {
   body .wrapper {
     padding: 0 10px;
   }
 
+  .content__header {
+    margin: 24px 0 48px;
+  }
+
   .logo__img {
     height: 48px;
   }
 
-  .hero h1.white, .hero h1 {
-    font-size: 26px;
-  }
-
-  h2.title, h3.title {
+  h2.title, h3.title, .title__h1 {
     font-size: 28px;
   }
 
@@ -3390,10 +3506,15 @@ div, ul, li, a, button {
 
   .btn_gradient, .btn_submit_white {
     font-size: 14px;
+    line-height: 1.2;
   }
 
   .btn_arrowR::after {
     margin-left: 12px;
+  }
+
+  .callback__form .btn_small {
+    font-weight: 600;
   }
 
   .form_main .btn_submit_white {
@@ -3411,6 +3532,16 @@ div, ul, li, a, button {
   .hero_main__portfolio-link {
     margin: 0 auto -10px;
     width: 280px;
+  }
+  .hero_case {
+    padding: 0;
+  }
+  .hero_case p {
+    font-size: 18px;
+  }
+  .hero h1.white, .hero .hero h1 {
+    font-size: 26px;
+    text-align: center;
   }
 
   .benefits__item_main {
@@ -3447,7 +3578,29 @@ div, ul, li, a, button {
   .contacts__phone {
     font-size: 28px;
   }
+  .contacts__wrapper_half.right {
+    padding: 20px 10px 30px;
+  }
+  .contacts__wrapper_half.right h3 {
+    font-size: 32px;
+    text-align: center;
+  }
+  .contacts__wrapper_half.right .btn {
+    padding: 20px 30px 18px;
+  }
+  .contacts__wrapper_half.right .contacts__list {
+    margin-bottom: 0;
+  }
 
+  .services_page .services__info {
+    padding: 20px;
+  }
+  .services_page .services__info__list__item {
+    font-size: 16px;
+  }
+  .services_page .services__item__title {
+    font-size: 24px;
+  }
   .services__item__title {
     font-size: 22px;
     margin-bottom: 40px;
@@ -3499,6 +3652,16 @@ div, ul, li, a, button {
     line-height: 1.4;
   }
 
+  .result__list__item {
+    padding-left: 180px;
+  }
+  .result__list__item__title {
+    font-size: 18px;
+  }
+  .result .title {
+    font-size: 36px;
+  }
+
   .about__download-link {
     width: 140px;
     height: 140px;
@@ -3508,12 +3671,15 @@ div, ul, li, a, button {
     font-size: 20px;
   }
 
-  .contacts__wrapper_half.right {
-    padding: 20px 10px 30px;
+  .stage__list li h3 {
+    font-size: 24px;
   }
-  .contacts__wrapper_half.right h3 {
-    font-size: 32px;
-    text-align: center;
+
+  .target__list {
+    padding-top: 32px;
+  }
+  .target .approach__img {
+    display: none;
   }
 }
 @media only screen and (max-width: 360px) {
@@ -3546,6 +3712,35 @@ div, ul, li, a, button {
   }
   .about__download-link span {
     margin-top: 0.5em;
+  }
+
+  .contacts__phone {
+    font-size: 24px;
+  }
+  .contacts__wrapper_half.right h3 {
+    font-size: 28px;
+  }
+
+  .s_how .how .how__list__item {
+    padding-left: 64px;
+  }
+
+  .stage__list {
+    padding: 0;
+  }
+  .stage__list li h3 {
+    font-size: 20px;
+  }
+  .stage__list li::after {
+    top: 40px;
+  }
+
+  .result__list__item, .result__list__item:first-child {
+    padding: 72px 0 1em;
+  }
+  .result__list__item::before, .result__list__item:first-child::before {
+    top: 1em;
+    left: calc(50% - 80px);
   }
 }
 
